force-app/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <description>Created By: BN
Business Unit: Geekwise Users
Purpose: To Track Geekwise Class Registrations</description>
    <label>Registration</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Registration #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>