force-app/main/default/objects/Registration__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description>Created By: CC
Purpose: Track Balance remaining on Registrations.</description>
    <formula>Class__r.Class_Cost__c - Total_Payments_DLRS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>