force-app/main/default/objects/Registration__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Created By: CC
Purpose: Registration Address City</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>