force-app/main/default/objects/Registration__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Link a Class to the Registration record
Populated: Manual/Auto via Web form</description>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>