force-app/main/default/objects/Registration__c/fields/Class_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_End_Date__c</fullName>
    <formula>Class__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class End Date</label>
    <type>Date</type>
</CustomField>