force-app/main/default/objects/Registration__c/fields/Class_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Start_Date__c</fullName>
    <formula>Class__r.Start_Date__c</formula>
    <label>Class Start Date</label>
    <type>Date</type>
</CustomField>