force-app/main/default/objects/Registration__c/fields/Consecutive_Absence_Count__c.field-meta.xml
<CustomField>
    <fullName>Consecutive_Absence_Count__c</fullName>
    <description>Joe&apos;s Squad
Counts Consecutive Absence through a Process Builder</description>
    <label>Consecutive Absence Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>