force-app/main/default/objects/Registration__c/fields/Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Date__c</fullName>
    <description>Created By: RS 
Purpose: To define the drop date of a student.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Drop Date</label>
    <type>Date</type>
</CustomField>