force-app/main/default/objects/Registration__c/fields/Dropped__c.field-meta.xml
<CustomField>
    <fullName>Dropped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Indicates if a student has dropped from a class with no credit
Populated: Manual</description>
    <inlineHelpText>Registrant has dropped from the class without credit</inlineHelpText>
    <label>Dropped</label>
    <type>Checkbox</type>
</CustomField>