force-app/main/default/objects/Registration__c/fields/Dropped_w_Credit__c.field-meta.xml
<CustomField>
    <fullName>Dropped_w_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Indicates that a student has dropped from a class and received credit for a future class
Populated: Manual</description>
    <inlineHelpText>Registrant has dropped from the class, and received credit for a future class</inlineHelpText>
    <label>Dropped w/Credit</label>
    <type>Checkbox</type>
</CustomField>