force-app/main/default/objects/Registration__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <defaultValue>&quot;Other&quot;</defaultValue>
    <description>CC WFT Market of Registered Student. Auto-populated in Code using PostalCode.</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BW_Market</valueSetName>
    </valueSet>
</CustomField>