force-app/main/default/objects/Registration__c/fields/Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Paid_in_Full__c</fullName>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Tracking if the Registration Balance is paid in full
Populated: Auto via Formula</description>
    <formula>Balance__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid in Full</label>
    <type>Checkbox</type>
</CustomField>