force-app/main/default/objects/Registration__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: CC
Department: WFT
Purpose: Indicate if Registration is being payed with a Payment Plan.</description>
    <label>Payment Plan?</label>
    <type>Checkbox</type>
</CustomField>