force-app/main/default/objects/Registration__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>CC WFT Store Postal Code from Registration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>