force-app/main/default/objects/Registration__c/fields/Registrant__c.field-meta.xml
<CustomField>
    <fullName>Registrant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By: AF
Business Unit: Geekwise Users
Purpose: Links the Registration record to a Contact
Populated: Manual/Auto with Web form</description>
    <label>Registrant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>