force-app/main/default/objects/Registration__c/fields/Registrant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Registrant_First_Name__c</fullName>
    <description>Created by JW
Purpose: To be used in email templates for survey purposes.</description>
    <formula>Registrant__r.FirstName</formula>
    <label>Registrant First Name</label>
    <type>Text</type>
</CustomField>