force-app/main/default/objects/Registration__c/fields/Scholarship_Type__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Type__c</fullName>
    <description>Created by: VC
Business Unit: Workforce Training
Purpose: Track registrations who have or have not offered a scholarship.</description>
    <label>Scholarship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Full Scholarship</fullName>
            </value>
            <value>
                <fullName>Partial Scholarship</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>