force-app/main/default/objects/Registration__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Created By: CC
Purpose: Registration States.</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>