force-app/main/default/objects/Registration__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Created By: CC
Purpose: Store street value for Address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>