force-app/main/default/objects/Registration__c/fields/Student_Source__c.field-meta.xml
<CustomField>
    <fullName>Student_Source__c</fullName>
    <description>CC WFT What the student marked on registration for how they heard about WFT</description>
    <label>Student Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WFT_Student_Source</valueSetName>
    </valueSet>
</CustomField>