force-app/main/default/objects/Registration__c/fields/Student_Source_Fill_In__c.field-meta.xml
<CustomField>
    <fullName>Student_Source_Fill_In__c</fullName>
    <description>CC WFT Fill In Fields for Student Source on when registering.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Student Source Fill In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>