force-app/main/default/objects/Registration__c/fields/Student_Success_Specialist_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Specialist_Email__c</fullName>
    <description>GS
Purpose: To send email alerts to SSS</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Student Success Specialist Email</label>
    <type>Email</type>
</CustomField>