force-app/main/default/objects/Registration__c/fields/Total_Payments_DLRS__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_DLRS__c</fullName>
    <description>GS
Purpose: For DLRS</description>
    <label>Total Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>