force-app/main/default/objects/Registration__c/validationRules/Registrant_Requires_Valid_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Registrant_Requires_Valid_Email</fullName>
    <active>true</active>
    <errorConditionFormula>Registrant__r.Email = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Registrant__c</errorDisplayField>
    <errorMessage>The registrant requires a valid email address.</errorMessage>
</ValidationRule>