force-app/main/default/objects/Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Balance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>