force-app/main/default/objects/Registration__c/listViews/Dropped_Registrations.listView-meta.xml
<ListView>
    <fullName>Dropped_Registrations</fullName>
    <columns>Registrant__c</columns>
    <columns>NAME</columns>
    <columns>Dropped__c</columns>
    <columns>Drop_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dropped__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Dropped Registrations</label>
    <sharedTo>
        <role>Workforce_Training_Team</role>
    </sharedTo>
</ListView>