force-app/main/default/objects/Registration__c/listViews/WFT_Registrations_Market_and_Zip.listView-meta.xml
<ListView>
    <fullName>WFT_Registrations_Market_and_Zip</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Market__c</columns>
    <columns>PostalCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>WFT Registrations - Market and Zip</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
        <group>VP_Team</group>
        <group>Workforce_Training_Team</group>
    </sharedTo>
</ListView>