force-app/main/default/objects/Registration__c/listViews/WFT_Registrations_Outstanding_Balances.listView-meta.xml
<ListView>
    <fullName>WFT_Registrations_Outstanding_Balances</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_in_Full__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>WFT Registrations - Outstanding Balances</label>
    <sharedTo>
        <group>Tech_Support_Team</group>
        <group>VP_Team</group>
        <group>WFT_Instructor_Team</group>
        <group>WFT_TA_Team</group>
        <group>Workforce_Training_Team</group>
    </sharedTo>
</ListView>