force-app/main/default/objects/Registration__c/listViews/WFT_Registrations_With_Demographics.listView-meta.xml
<ListView>
    <fullName>WFT_Registrations_With_Demographics</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Market__c</columns>
    <columns>PostalCode__c</columns>
    <columns>Student_Source__c</columns>
    <columns>Student_Source_Fill_In__c</columns>
    <filterScope>Everything</filterScope>
    <label>WFT Registrations - With Demographics</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
        <group>VP_Team</group>
        <group>Workforce_Training_Team</group>
    </sharedTo>
</ListView>