force-app/main/default/objects/Registration__c/listViews/WFT_Registrations_Zip_With_No_Market.listView-meta.xml
<ListView>
    <fullName>WFT_Registrations_Zip_With_No_Market</fullName>
    <columns>NAME</columns>
    <columns>Registrant__c</columns>
    <columns>Class__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Market__c</columns>
    <columns>PostalCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>PostalCode__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>WFT Registrations - Zip With No Market</label>
    <sharedTo>
        <group>SF_Admin_Team</group>
        <group>VP_Team</group>
        <group>Workforce_Training_Team</group>
    </sharedTo>
</ListView>